Bug-fix: onpage "no" warnings were not styled, and not showing on page refresh.

--- a/css/nata_sss_tweaks.css
+++ b/css/nata_sss_tweaks.css
@@ -2,7 +2,7 @@
  * Custom styles for nata_sss_tweaks.module.
  */
 
-div.nata_sss_onpage_validate_onpage {
+div.nata_sss_onpage_validate_yes_warning {
   margin: 0px 15px;
   padding: 10px;
   background-color: #fef5f1;
